Add lesson 003 – Cyberchondriac

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <p>Select a lesson:</p>
   <ul>
     <li><a href="lessons/001-used-to.html">Used to vs Be Used to</a></li>
+    <li><a href="lessons/003-cyberchondriac.html">Confessions of a Cyberchondriac (AEF 4 – 2A)</a></li>
   </ul>
 </body>
 </html>
